--- a/tekton/kustomize/s2i-task.yaml
+++ b/tekton/kustomize/s2i-task.yaml
@@ -5,6 +5,7 @@ metadata:
     tekton.dev/displayName: s2i java 11
     tekton.dev/pipelines.minVersion: 0.11.3
     tekton.dev/tags: 's2i, java, workspace'
+    argocd.argoproj.io/sync-wave: "1"
   name: s2i-java-11-custom
   namespace: demo-ci-cd
 
