--- a/tekton/kustomize/pv.yaml
+++ b/tekton/kustomize/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: build volume
+  name: build-volume
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
