--- a/tekton/kustomize/pv.yaml
+++ b/tekton/kustomize/pv.yaml
@@ -2,6 +2,7 @@
 kind: PersistentVolume
 ***REMOVED***
   name: build-volume
+  namespace: demo-ci-cd-test
 ***REMOVED***
     argocd.argoproj.io/sync-wave: "0"
 spec:
@@ -10,7 +11,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: gp2
+  storageClassName: slow
   nfs:
     path: /tmp
     server: 172.17.0.2
