--- a/tekton/kustomize/secret.yaml
+++ b/tekton/kustomize/secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: quay
+  name: quay-credentials
   namespace: demo-ci-cd-test
   annotations:
     tekton.dev/docker-0: 'http://quay.io/'
