--- a/tekton/kustomize/secret.yaml
+++ b/tekton/kustomize/secret.yaml
@@ -1,7 +1,7 @@
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
-  name: quay
+  name: quay-credentials
   namespace: demo-ci-cd-test
 ***REMOVED***
     tekton.dev/docker-0: 'http://quay.io/'
