--- a/tekton/kustomize/pv.yaml
+++ b/tekton/kustomize/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: build-volume
+  name: tekton-build-volume-test
   namespace: demo-ci-cd-test
   annotations:
     argocd.argoproj.io/sync-wave: "0"
@@ -11,7 +11,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: slow
+  storageClassName: gp2
   nfs:
     path: /tmp
     server: 172.17.0.2
