--- a/test/kustomize/route.yaml
+++ b/test/kustomize/route.yaml
@@ -2,6 +2,9 @@ apiVersion: route.openshift.io/v1
 kind: Route
 ***REMOVED***
   name: quick-start-route-test
+***REMOVED***
+    app: quick-start
+    app.kubernetes.io/instance: quick-start
 spec:
   to:
     kind: Service
