--- a/tekton/kustomize/secret.yaml
+++ b/tekton/kustomize/secret.yaml
@@ -2,7 +2,7 @@
 ***REMOVED***
 ***REMOVED***
   name: quay-credentials
-  namespace: demo-ci-cd-test
+  namespace: demo-gitops
 ***REMOVED***
     tekton.dev/docker-0: 'http://quay.io/'
     argocd.argoproj.io/sync-wave: "0"
