--- a/tekton/kustomize/kustomization.yaml
+++ b/tekton/kustomize/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: demo-ci-cd-test
+namespace: demo-gitops
 resources:
   - pipeline.yaml
   - s2i-task.yaml
   - pvc.yaml
-  - pv.yaml
+  #- pv.yaml
   - secret.yaml
