--- a/tekton/kustomize/pv.yaml
+++ b/tekton/kustomize/pv.yaml
@@ -10,7 +10,7 @@ spec:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: slow
+  storageClassName: gp2
   nfs:
     path: /tmp
     server: 172.17.0.2
