--- a/tekton/kustomize/s2i-task.yaml
+++ b/tekton/kustomize/s2i-task.yaml
@@ -7,7 +7,7 @@ kind: Task
     tekton.dev/tags: 's2i, java, workspace'
     argocd.argoproj.io/sync-wave: "1"
   name: s2i-java-11-custom
-  namespace: demo-ci-cd
+  namespace: demo-gitops
 
 spec:
   description: >-
