--- a/tekton/kustomize/secret.yaml
+++ b/tekton/kustomize/secret.yaml
@@ -2,7 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: quay-credentials
-  namespace: demo-ci-cd-test
+  namespace: demo-gitops
   annotations:
     tekton.dev/docker-0: 'http://quay.io/'
     argocd.argoproj.io/sync-wave: "0"
