--- a/tekton/kustomize/kustomization.yaml
+++ b/tekton/kustomize/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: demo-gitops
+namespace: demo-gitops-2
 resources:
   - pipeline.yaml
   - s2i-task.yaml
