--- a/tekton/kustomize/pipeline.yaml
+++ b/tekton/kustomize/pipeline.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 ***REMOVED***
   name: quarkus-getting-started-pipeline-test
-  namespace: demo-gitops
+  namespace: demo-gitops-2
 ***REMOVED***
     argocd.argoproj.io/sync-wave: "2"
 spec:
