fixed tls verify

--- a/tekton/kustomize/pipeline.yaml
+++ b/tekton/kustomize/pipeline.yaml
@@ -68,7 +68,7 @@ spec:
         - name: PATH_CONTEXT
           value: .
         - name: TLSVERIFY
-          value: 'true'
+          value: 'false'
         - name: MAVEN_CLEAR_REPO
           value: 'false'
         - name: IMAGE_NAME
