added service account for secrets

--- a/test/kustomize/quick-start.yaml
+++ b/test/kustomize/quick-start.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: quick-start
   labels:
+    app.openshift.io/runtime: quarkus
     app.kubernetes.io/runtime: quarkus
 spec:
   replicas: 1
