--- a/test/kustomize/quick-start.yaml
+++ b/test/kustomize/quick-start.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 ***REMOVED***
   name: quick-start
 ***REMOVED***
+    app.openshift.io/runtime: quarkus
     app.kubernetes.io/runtime: quarkus
 spec:
   replicas: 1
