--- a/test/kustomize/kustomization.yaml
+++ b/test/kustomize/kustomization.yaml
@@ -5,3 +5,6 @@ resources:
 - quick-start.yaml
 - service.yaml
 - route.yaml
+images:
+- name: quay.io/mcombi/quarkus-getting-started
+  newTag: 1ff0a92f93d6e9e9be95ce0e32f772182ee7a34d
