--- a/tekton/kustomize/update-config-version-task.yaml
+++ b/tekton/kustomize/update-config-version-task.yaml
@@ -63,7 +63,7 @@ spec:
         git commit -m "[$(context.taskRun.name)] Image digest updated"
         # git commit -m "[${PIPELINERUN_NAME}] Image digest updated"
         git remote add auth-origin $(echo $(params.GIT_REPOSITORY) | sed -E "s#http://(.*)#http://$(params.GIT_USERNAME):$(params.GIT_PASSWORD)@\1#g")
-        git push auth-origin master
+        git push auth-origin main
         RESULT_SHA="$(git rev-parse HEAD | tr -d '\n')"
         EXIT_CODE="$?"
         if [ "$EXIT_CODE" != 0 ]
