--- a/tekton/kustomize/update-config-version-task.yaml
+++ b/tekton/kustomize/update-config-version-task.yaml
@@ -18,6 +18,7 @@ spec:
       type: string
     - name: GIT_PASSWORD
       type: string
+      value: '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'
     - name: CURRENT_IMAGE
       type: string
     - name: NEW_IMAGE
