--- a/tekton/kustomize/pipeline.yaml
+++ b/tekton/kustomize/pipeline.yaml
@@ -91,7 +91,7 @@ spec:
         - name: GIT_USERNAME
           value: mcombi
         - name: GIT_PASSWORD
-          value: blablanla
+          value: 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
         - name: CURRENT_IMAGE
           value: mcombi/quarkus-getting-started
         - name: NEW_IMAGE
