--- a/test/kustomize/quick-start.yaml
+++ b/test/kustomize/quick-start.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: demo
-          image: quay.io/mcombi/quarkus-getting-started:latest
+          image: quay.io/mcombi/quarkus-getting-started:c04d53ecc1f81b54fce23dd7f8b72d373038acfc
           ports:
             - containerPort: 8080
               protocol: TCP
