--- a/test/kustomize/quick-start.yaml
+++ b/test/kustomize/quick-start.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: quarkus-getting-started
-          image: quay.io/mcombi/quarkus-getting-started:latest
+          image: quay.io/mcombi/quarkus-getting-started
           ports:
             - containerPort: 8080
               protocol: TCP
