--- a/tekton/base/pipeline.yaml
+++ b/tekton/base/pipeline.yaml
@@ -99,7 +99,7 @@ spec:
         - name: NEW_DIGEST
           value: $(tasks.git-clone.results.commit)
         - name: KUSTOMIZATION_PATH
-          value: test/kustomize
+          value: quick-start/overlays/test
       runAfter:
          - s2i-java-11-custom
       taskRef:
