--- a/quick-start/overlays/test/quick-start.yaml
+++ b/quick-start/overlays/test/quick-start.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: quarkus-getting-started
-          image: quay.io/mcombi/quarkus-getting-started
+          image: quay.io/mcombi/quarkus-getting-started:latest
           ports:
             - containerPort: 8080
               protocol: TCP
