--- a/tekton/base/pv.yaml
+++ b/tekton/base/pv.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: tekton-build-volume-test
-  namespace: demo-ci-cd-test
+  namespace: demo-tekton-build-env
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
