--- a/tekton/base/s2i-task.yaml
+++ b/tekton/base/s2i-task.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/tags: 's2i, java, workspace'
     argocd.argoproj.io/sync-wave: "1"
   name: s2i-java-11-custom
-  namespace: demo-gitops-2
+  namespace: demo-tekton-build-env
 
 spec:
 
