--- a/tekton/base/update-config-version-task.yaml
+++ b/tekton/base/update-config-version-task.yaml
@@ -6,6 +6,7 @@ metadata:
     tekton.dev/tags: git
     argocd.argoproj.io/sync-wave: "3"
   name: git-update-deployment
+  namespace: demo-tekton-build-env
   labels:
     app.kubernetes.io/version: '0.1'
     operator.tekton.dev/provider-type: community
@@ -51,9 +52,6 @@ spec:
         echo "### kustomization.yaml ###"
         echo "##########################"
         cat kustomization.yaml
-        
-
-        
 
     - name: git-commit
       image: docker.io/alpine/git:v2.26.2
