--- a/argocd/quick-start-pipelines.yaml
+++ b/argocd/quick-start-pipelines.yaml
@@ -9,11 +9,11 @@ spec:
   project: "demo"
   source:
     repoURL: 'https://github.com/mcombi/my-quarkus-quick-start-config.git'
-    path: tekton/kustomize
+    path: tekton/base
     targetRevision: main
   destination:
     server: https://kubernetes.default.svc
-    namespace: demo-gitops-2
+  ***REMOVED***
   syncPolicy:
     automated:
       prune: false
