--- a/tekton/base/update-config-version-task.yaml
+++ b/tekton/base/update-config-version-task.yaml
@@ -47,7 +47,7 @@ spec:
       workingDir: $(workspaces.workspace.path)
       script: |
         cd git-update-digest-workdir/$(params.KUSTOMIZATION_PATH)
-        /app/kustomize edit set image $(params.CURRENT_IMAGE)=$(params.NEW_IMAGE)@$(params.NEW_DIGEST)
+        /app/kustomize edit set image $(params.CURRENT_IMAGE)=$(params.NEW_IMAGE):$(params.NEW_DIGEST)
         echo "##########################"
         echo "### kustomization.yaml ###"
         echo "##########################"
