added triggers for github webhook

--- a/tekton/base/pvc.yaml
+++ b/tekton/base/pvc.yaml
@@ -2,6 +2,8 @@
 kind: PersistentVolumeClaim
 ***REMOVED***
   name: source-pvc
+***REMOVED***
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   accessModes:
     - ReadWriteOnce
