added route for events

--- a/tekton/base/triggers/route.yaml
+++ b/tekton/base/triggers/route.yaml
@@ -3,6 +3,7 @@ kind: Route
 ***REMOVED***
   name: el-quick-start
 ***REMOVED***
+***REMOVED***
     argocd.argoproj.io/sync-wave: "4"
 ***REMOVED***
     app: quick-start
