--- a/tekton/base/triggers/route.yaml
+++ b/tekton/base/triggers/route.yaml
@@ -2,6 +2,7 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   name: el-quick-start
+  namespace: demo-tekton-build-env
   annotations:
     argocd.argoproj.io/sync-wave: "4"
   labels:
