--- a/tekton/base/s2i-task.yaml
+++ b/tekton/base/s2i-task.yaml
@@ -174,7 +174,7 @@ spec:
       name: envparams
     - name: quay-auth-secret
       secret:
-        secretName: dockerconfigjson
+        secretName:   quay-credentials
         items:
           - key: .dockerconfigjson
             path: config.json
