--- a/tekton/base/storage-class.yaml
+++ b/tekton/base/storage-class.yaml
@@ -1,7 +1,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 ***REMOVED***
-  name: my-gp2
+  name: my-gp2-immediate
 ***REMOVED***
     argocd.argoproj.io/sync-wave: "0"
 provisioner: kubernetes.io/aws-ebs
