added promote tasks

--- a/tekton/base/triggers/trigger-template.yaml
+++ b/tekton/base/triggers/trigger-template.yaml
@@ -22,7 +22,7 @@ spec:
       spec:
         serviceAccountName: pipeline
         serviceAccountNames:
-          - taskName: git-update-deployment
+          - taskName: git-update-deployment-test
             serviceAccountName: github-service-account
 
         pipelineRef:
