--- a/tekton/base/pipeline.yaml
+++ b/tekton/base/pipeline.yaml
@@ -84,7 +84,7 @@ spec:
       workspaces:
         - name: source
           workspace: source
-    - name: git-update-deployment
+    - name: git-update-deployment-test
       params:
         - name: GIT_REPOSITORY
           value: 'https://github.com/mcombi/my-quarkus-quick-start-config.git'
