--- a/tekton/base/update-config-version-task-test.yaml
+++ b/tekton/base/update-config-version-task-test.yaml
@@ -68,6 +68,8 @@ spec:
       image: docker.io/alpine/git:v2.26.2
       workingDir: $(workspaces.workspace.path)
       script: |
+        echo username: ${GITUSERNAME}
+        echo username: ${env.GITUSERNAME}
         cd git-update-digest-workdir
         git config user.email "tekton-pipelines-ci@redhat.com"
         git config user.name "tekton-pipelines-ci"
