added promote tasks

--- a/tekton/base/kustomization.yaml
+++ b/tekton/base/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - quay-secret.yaml
   #- build-service-account.yaml
   - github-secret.yaml
+  - github-secret-sealed.yaml
   - github-service-account.yaml
   - update-config-version-task-test.yaml
   - update-config-version-task.yaml
