--- a/argocd/quick-start-pipelines.yaml
+++ b/argocd/quick-start-pipelines.yaml
@@ -6,14 +6,14 @@ kind: Application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: "demo"
+  project: default
   source:
     repoURL: 'https://github.com/mcombi/my-quarkus-quick-start-config.git'
     path: tekton/base
     targetRevision: main
   destination:
     server: https://kubernetes.default.svc
-  ***REMOVED***
+    namespace: a2a-demo-test
   syncPolicy:
     automated:
       prune: false
