--- a/quick-start/overlays/test/service.yaml
+++ b/quick-start/overlays/test/service.yaml
@@ -10,6 +10,7 @@ spec:
   ports:
     - protocol: "TCP"
       port: 8080
+      targetPort: 8080
       name: server
   selector:
     app: quick-start
