--- a/quick-start/overlays/test/quick-start.yaml
+++ b/quick-start/overlays/test/quick-start.yaml
@@ -4,6 +4,7 @@ kind: Deployment
   name: quick-start
 ***REMOVED***
     app.openshift.io/runtime: quarkus
+    app: quick-start
     app-with-metrics: quick-start
 spec:
   replicas: 1
