added version label

--- a/quick-start/overlays/test/quick-start.yaml
+++ b/quick-start/overlays/test/quick-start.yaml
@@ -6,6 +6,7 @@ metadata:
     app.openshift.io/runtime: quarkus
     app: quick-start
     app-with-metrics: quick-start
+    version: v1
 spec:
   replicas: 3
   selector:
