--- a/quick-start/overlays/test/route.yaml
+++ b/quick-start/overlays/test/route.yaml
@@ -11,5 +11,5 @@ spec:
     name: quick-start-service
     weight: 100
   port:
-    targetPort: server-tcp
+    targetPort: server
   wildcardPolicy: None
