--- a/quick-start/overlays/test/service.yaml
+++ b/quick-start/overlays/test/service.yaml
@@ -8,10 +8,10 @@ metadata:
     cloud.google.com/load-balancer-type: "Internal"
 spec:
   ports:
-    - protocol: "TCP"
+    - protocol: TCP
       port: 8080
       targetPort: 8080
-      name: server-tcp
+      name: server
   selector:
     app: quick-start
   type: LoadBalancer
