--- a/quick-start/overlays/test/service.yaml
+++ b/quick-start/overlays/test/service.yaml
@@ -11,7 +11,7 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-      name: server
+      name: http
   selector:
     app: quick-start
   type: LoadBalancer
